# GatoSnap

./: .gitignore  deploy.sh  supervisord.conf
backend/: .gitignore  Untitled-1.ipynb  auth_token.yml  base_url.yml  crud.py  database.py  main.py  models.py  plex_api.py  pyproject.toml  schemas.py  supervisord.conf  tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 1d074a07da59_added_dates_to_task.py  57e8b396ea52_remove_md5.py  6898448d7c98_remove_storage_path_from_file.py  b8d3f861fb6c_initial_migration.py  d5120d314a4c_tweaked_rating_key_uniqueness.py  db2156006e9b_additional_settings_on_storage_device.py
backend/scripts/: backend.sh  tasks.sh
backend/static/: asset-manifest.json  index.html
backend/static/static/css/: main.0b65c844.css  main.0b65c844.css.map
backend/static/static/js/: main.b205bcc3.js  main.b205bcc3.js.map  main.b3116912.js  main.b3116912.js.map  main.d05d5349.js  main.d05d5349.js.map
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  CreateStorageDevice.jsx  Loading.jsx  LoadingCircle.jsx  ProgressBar.jsx  StorageDeviceCard.jsx  TaskCard.jsx  index.js  query.js  util.js
